--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "eventsource-parser": "^1.1.2",
+    "jspdf": "^3.0.1",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
