--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -27,3 +27,7 @@ package-lock.json
 
 # Visual Studio Code workspace folder
 .vs/
+
+# Ignore Python cache and compiled files
+__pycache__/
+*.py[cod]
